# xrt-sorter-geant4-undergrad-guide

./: .gitignore  CMakeLists.txt  LICENSE.md  NOTICE.md  PACKAGE_MANIFEST.json  README.md  exampleB1.cc  vis.mac
analysis/: accuracy_v6_gate.py  audit_v8a_count_balance_sensitivity.py  audit_v8a_count_overlap_extension_prereg.py  audit_v8a_crystal_clean_admission.py  audit_v8a_threshold_free_null_protocol.py  build_v8a_residualization_protocol_rework_v1_views.py  classify_absorption_groups.py  diagnose_v8a_paired_clean_null_behavior.py  export_measurement_cube_v7b.py  generate_material_sorting_matrix.py  generate_v8a_clean_hm_development_matrix.py  generate_v8a_count_overlap_extension_matrix.py  material_sorting.py  material_sorting_energy_scan.py  material_sorting_rebuild_diagnostics.py  material_sorting_selected_rebuild.py  material_sorting_v2.py  run_material_sorting_matrix.py  run_material_sorting_matrix_parallel.py  strict_generalization_audit.py  train_v7b.py  train_v8a_count_balanced_retest.py  train_v8a_event_feature_smoke.py  train_v8a_medium_count_matched_rework.py  v8a_diffraction_observability.py  v8a_event_to_feature_pipeline.py  xgboost_gpu_grid_v6.py
docs/: ACCURACY_SPRINT_V3_LAB_NOTEBOOK_zh.md  ACCURACY_SPRINT_V6C_RESULTS_zh.md  ACCURACY_SPRINT_V6_EXECUTION_zh.md  ACCURACY_SPRINT_V7B_HARD_NEGATIVE_DEV_zh.md  ACCURACY_SPRINT_V8A_BALANCED_DEV_DESIGN_REVIEW_zh.md  ACCURACY_SPRINT_V8A_DIFFRACTION_SIDECAR_zh.md  ACCURACY_SPRINT_V8A_FULLCELL_CLEAN_ADMISSION_REPORT_zh.md  ACCURACY_SPRINT_V8A_PAIRED_CLEAN_NULL_REPORT_zh.md  ACCURACY_V3_METHODS_NOTES_zh.md  (+12 more)
(+23738 files in other folders)
